# ExGit

./: CMakeLists.txt  Instructor.cpp  Instructor.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Researcher.cpp  Researcher.h  Student.cpp  Student.h  Worker.cpp  Worker.h  main.cpp
